[gd_scene load_steps=11 format=3 uid="uid://chkp5ltal2l4n"]

[ext_resource type="Theme" uid="uid://djb6iany7t78l" path="res://Assets/UiTheme.tres" id="1_c7cvr"]
[ext_resource type="Script" uid="uid://bpgo2y51du13a" path="res://Scenes/Title/buttons_and_title.gd" id="2_0rqj8"]
[ext_resource type="Texture2D" uid="uid://c70r0ll0sbh6x" path="res://Assets/Art/Speaker_Icon.png" id="3_po5g7"]
[ext_resource type="PackedScene" uid="uid://3hso8cn4h0xh" path="res://Scenes/Options/options.tscn" id="4_iv8b7"]

[sub_resource type="LabelSettings" id="LabelSettings_4obfb"]
font_size = 128

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4obfb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w31pl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekrfg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yosvi"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_3eqdi"]
size = Vector2(120, 120)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_c7cvr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Buttons and Title" type="VBoxContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -531.0
offset_top = -540.0
offset_right = 531.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1
script = ExtResource("2_0rqj8")

[node name="You are the Mom" type="Label" parent="Buttons and Title"]
layout_mode = 2
text = "You are the Mom
"
label_settings = SubResource("LabelSettings_4obfb")
horizontal_alignment = 1
vertical_alignment = 1
paragraph_separator = "\\"

[node name="Start" type="Button" parent="Buttons and Title"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_4obfb")
text = "Start"
icon_alignment = 1

[node name="Achievements" type="Button" parent="Buttons and Title"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_w31pl")
text = "Achievemets"
icon_alignment = 1

[node name="Options" type="Button" parent="Buttons and Title"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekrfg")
text = "Options
"
icon_alignment = 1

[node name="Exit" type="Button" parent="Buttons and Title"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekrfg")
toggle_mode = true
button_pressed = true
text = "Exit"
icon_alignment = 1

[node name="BGM Toggle" type="Button" parent="Buttons and Title"]
visible = false
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_yosvi")
icon = SubResource("PlaceholderTexture2D_3eqdi")
flat = true
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Buttons and Title/BGM Toggle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_po5g7")
expand_mode = 1

[node name="Options_Menu" type="CanvasLayer" parent="Buttons and Title"]
process_mode = 3

[node name="Options" parent="Buttons and Title/Options_Menu" instance=ExtResource("4_iv8b7")]
visible = false
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[connection signal="pressed" from="Buttons and Title/Start" to="Buttons and Title" method="_on_start_pressed"]
[connection signal="pressed" from="Buttons and Title/Achievements" to="Buttons and Title" method="_on_endings_pressed"]
[connection signal="pressed" from="Buttons and Title/Options" to="Buttons and Title" method="_on_options_pressed"]
[connection signal="pressed" from="Buttons and Title/Exit" to="Buttons and Title" method="_on_exit_pressed"]
[connection signal="pressed" from="Buttons and Title/BGM Toggle" to="Buttons and Title" method="_on_bgm_toggle_pressed"]
